--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SaaSify - Marketing Made Smarter</title>
+    <title>Cool OS</title>
 
     <!-- Google Fonts: Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,15 +37,14 @@
     <!-- 1. Navigation & Header -->
     <header class="main-header">
         <nav class="container">
-            <a href="#" class="logo">SaaSify</a>
+            <a href="#" class="logo">Cool OS</a>
             <div class="nav-menu-wrapper">
                 <ul class="nav-menu">
-                    <li><a href="#hero" class="nav-link active-link">Home</a></li>
-                    <li><a href="#features" class="nav-link">Features</a></li>
-                    <li><a href="#pricing" class="nav-link">Pricing</a></li>
-                    <li><a href="#about" class="nav-link">About</a></li>
+                    <li><a href="#hero" class="nav-link active-link">Accueil</a></li>
+                    <li><a href="#features" class="nav-link">Fonctionnalités</a></li>
+                    <li><a href="#about" class="nav-link">A propos</a></li>
                     <li><a href="#blog" class="nav-link">Blog</a></li>
-                    <li><a href="#contact" class="nav-link contact-button">Contact Us</a></li>
+                    <li><a href="#contact" class="nav-link contact-button">Contact</a></li>
                 </ul>
             </div>
             <button id="menu-toggle" aria-label="Open Navigation Menu">
@@ -61,36 +60,7 @@
         <!-- START: ULTIMATE ELEGANCE HERO SECTION                  -->
         <!-- ====================================================== -->
         <section id="hero" class="scroll-section">
-            <!-- Background Elements -->
-            <div class="hero-background-pattern"></div>
-            <div class="hero-gradient-overlay"></div>
-
-            <!-- The new graphics container for parallax effect -->
-            <div class="hero-graphics-container">
-                <!-- Main Dashboard Card (Centerpiece) -->
-                <div class="graphic-element main-dashboard-card" data-depth="0.2">
-                    <div class="dashboard-header">
-                        <span>Dashboard</span>
-                        <div class="user-pills">
-                            <img src="https://i.pravatar.cc/20?img=1" alt="user avatar">
-                            <img src="https://i.pravatar.cc/20?img=2" alt="user avatar">
-                            <span>+3</span>
-                        </div>
-                    </div>
-                    <div class="dashboard-chart">
-                        <svg viewBox="0 0 100 40" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M 0 30 C 20 10, 40 10, 60 25 S 80 40, 100 20" fill="none"
-                                stroke="url(#chart-gradient)" stroke-width="2" stroke-linecap="round" />
-                            <defs>
-                                <linearGradient id="chart-gradient" x1="0%" y1="0%" x2="100%" y2="0%">
-                                    <stop offset="0%" stop-color="var(--accent-violet)" />
-                                    <stop offset="100%" stop-color="var(--accent-blue)" />
-                                </linearGradient>
-                            </defs>
-                        </svg>
-                    </div>
-                    <div class="dashboard-stat"><span>Conversion Rate</span><strong>+12.5%</strong></div>
-                </div>
+      
 
                 <!-- Satellite Graphics -->
                 <div class="graphic-element floating-orb orb-1" data-depth="0.4"></div>
