--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
                 <div class="graphic-element floating-orb orb-1" data-depth="0.4"></div>
                 <div class="graphic-element floating-orb orb-2" data-depth="0.15"></div>
                 <div class="graphic-element progress-card" data-depth="0.3">
-                    <span>Syncing...</span>
                     <div class="progress-bar">
                         <div class="progress-fill"></div>
                     </div>
@@ -78,9 +77,9 @@
 
             <!-- Main Text Content -->
             <div class="hero-content">
-                <h1 class="reveal-item">Marketing Made Smarter</h1>
-                <p class="reveal-item">Powerful, easy-to-use SaaS solutions designed to help you grow</p>
-                <a href="#" class="cta-button elegant-cta reveal-item">Get Started for Free</a>
+                <h1 class="reveal-item">Cool OS</h1>
+                <p class="reveal-item">Système d'exploitation par navigateur</p>
+                <a href="https://cool-os-V3.netlify.app" class="cta-button elegant-cta reveal-item">Accéder</a>
             </div>
         </section>
         <!-- ====================================================== -->
@@ -92,8 +91,8 @@
         <!-- ====================================================== -->
         <section id="features" class="container scroll-section">
             <div class="section-title reveal-item">
-                <h3>Our Features</h3>
-                <h2>Everything You Need, All in One Place</h2>
+                <h3>Fonctionnalités</h3>
+                <h2>Un OS polyvalent et fluide.</h2>
             </div>
 
             <div class="features-showcase-grid">
@@ -102,29 +101,29 @@
                     <button class="feature-item active" data-feature="chat">
                         <i class="fas fa-comments"></i>
                         <div>
-                            <h4>Live Chat & Engagement</h4>
-                            <p>Connect with visitors in real-time to drive sales.</p>
+                            <h4>Intégration de l'IA</h4>
+                            <p>Votre assistant Calypso pour vous aider au quotidien.</p>
                         </div>
                     </button>
                     <button class="feature-item" data-feature="payment">
                         <i class="fas fa-shield-alt"></i>
                         <div>
-                            <h4>Secured Payments</h4>
-                            <p>Integrate a fast and secure checkout experience.</p>
+                            <h4>Respectueux de la vie privée</h4>
+                            <p>Notre site récupère le minimum de données possible.</p>
                         </div>
                     </button>
                     <button class="feature-item" data-feature="feedback">
                         <i class="fas fa-star"></i>
                         <div>
-                            <h4>Customer Feedback</h4>
-                            <p>Collect reviews and build powerful social proof.</p>
+                            <h4>Gratuit et sans publicités</h4>
+                            <p>Une utilisation sans tracas.</p>
                         </div>
                     </button>
                     <button class="feature-item" data-feature="analytics">
                         <i class="fas fa-chart-line"></i>
                         <div>
-                            <h4>Advanced Analytics</h4>
-                            <p>Track your performance with beautiful data reports.</p>
+                            <h4>Puissant</h4>
+                            <p>Consomme peu de ressources mais est très puissant.</p>
                         </div>
                     </button>
                 </div>
