--- a/index.html
+++ b/index.html
@@ -128,17 +128,14 @@
                     </button>
                 </div>
 
-                <!-- Right Side: Dynamic Visual Preview -->
+               <!-- Right Side: Dynamic Visual Preview -->
                 <div class="feature-preview-panel">
                     <!-- Preview for Live Chat -->
                     <div class="feature-preview-item visible" id="feature-preview-chat">
                         <div class="browser-mockup">
                             <div class="browser-header"><span></span><span></span><span></span></div>
-                            <div class="browser-content chat-preview-animated">
-                                <div class="chat-bubble-animated agent">Hello! How can we help you today?</div>
-                                <div class="chat-bubble-animated user">I'm interested in the Business plan...</div>
-                                <div class="chat-bubble-animated agent typing"><span></span><span></span><span></span>
-                                </div>
+                            <div class="browser-content">
+                                <img src="static/capture-ia" alt="Aperçu IA" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                         </div>
                     </div>
@@ -146,11 +143,8 @@
                     <div class="feature-preview-item" id="feature-preview-payment">
                         <div class="browser-mockup">
                             <div class="browser-header"><span></span><span></span><span></span></div>
-                            <div class="browser-content payment-preview-animated">
-                                <i class="fas fa-shield-alt payment-icon"></i>
-                                <h3>Payment Confirmed</h3>
-                                <p>$99.00 has been successfully charged.</p>
-                                <div class="receipt-id">Transaction ID: #A4B2C1-2024</div>
+                            <div class="browser-content">
+                                <img src="static/capture-ia" alt="Aperçu vie privée" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                         </div>
                     </div>
@@ -158,14 +152,8 @@
                     <div class="feature-preview-item" id="feature-preview-feedback">
                         <div class="browser-mockup">
                             <div class="browser-header"><span></span><span></span><span></span></div>
-                            <div class="browser-content feedback-preview-animated">
-                                <img src="https://i.pravatar.cc/80?img=1" alt="User Avatar">
-                                <h4>"A total game-changer!"</h4>
-                                <div class="stars">
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                        class="fas fa-star"></i><i class="fas fa-star"></i>
-                                </div>
-                                <p class="author">- Jane Doe, CEO of ExampleCo</p>
+                            <div class="browser-content">
+                                <img src="static/capture-ia" alt="Aperçu gratuit" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                         </div>
                     </div>
@@ -173,14 +161,8 @@
                     <div class="feature-preview-item" id="feature-preview-analytics">
                         <div class="browser-mockup">
                             <div class="browser-header"><span></span><span></span><span></span></div>
-                            <div class="browser-content analytics-preview-animated">
-                                <h4>Monthly Visitors</h4>
-                                <div class="chart">
-                                    <div class="chart-bar" style="height: 30%;"><span>Jan</span></div>
-                                    <div class="chart-bar" style="height: 50%;"><span>Feb</span></div>
-                                    <div class="chart-bar" style="height: 45%;"><span>Mar</span></div>
-                                    <div class="chart-bar" style="height: 75%;"><span>Apr</span></div>
-                                </div>
+                            <div class="browser-content">
+                                <img src="static/capture-ia" alt="Aperçu puissance" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                         </div>
                     </div>
@@ -191,177 +173,18 @@
         <!-- END: REPLACEMENT FOR FEATURES SECTION                  -->
         <!-- ====================================================== -->
 
-
         <!-- ====================================================== -->
-        <!-- START: REPLACEMENT FOR PRICING SECTION                 -->
+        <!-- SECTION BLOG                                           -->
         <!-- ====================================================== -->
-        <section id="pricing" class="container scroll-section">
+        
+<!--        <section id="blog" class="container scroll-section">
             <div class="section-title reveal-item">
-                <h3>Pricing Plans</h3>
-                <h2>Flexible Plans for Teams of All Sizes</h2>
-            </div>
-
-            <!-- Pricing Toggle Switch -->
-            <div class="pricing-toggle-container reveal-item">
-                <span>Monthly</span>
-                <label class="pricing-toggle">
-                    <input type="checkbox" id="pricing-switch">
-                    <span class="slider"></span>
-                </label>
-                <span>
-                    Yearly <span class="save-badge">Save 20%</span>
-                </span>
-            </div>
-
-            <div class="pricing-grid">
-                <!-- Plan 1: Starter -->
-                <div class="pricing-card reveal-item">
-                    <div class="plan-header">
-                        <i class="fas fa-user"></i>
-                        <h4>Starter</h4>
-                    </div>
-                    <p class="plan-description">For individuals and small teams getting started.</p>
-                    <div class="plan-price" data-monthly="29" data-yearly="23">
-                        <sup>$</sup><span class="price-value">29</span><span>/mo</span>
-                    </div>
-                    <ul class="plan-features">
-                        <li><i class="fas fa-check"></i> 5 Projects</li>
-                        <li><i class="fas fa-check"></i> Basic Analytics</li>
-                        <li><i class="fas fa-check"></i> 24/7 Email Support</li>
-                        <li><i class="fas fa-times"></i> Live Chat Integration</li>
-                    </ul>
-                    <a href="#" class="plan-button">Choose Plan</a>
-                </div>
-
-                <!-- Plan 2: Business (Popular) -->
-                <div class="pricing-card popular reveal-item">
-                    <div class="plan-header">
-                        <i class="fas fa-briefcase"></i>
-                        <h4>Business</h4>
-                    </div>
-                    <p class="plan-description">For growing businesses that need more power and scale.</p>
-                    <div class="plan-price" data-monthly="99" data-yearly="79">
-                        <sup>$</sup><span class="price-value">99</span><span>/mo</span>
-                    </div>
-                    <ul class="plan-features">
-                        <li><i class="fas fa-check"></i> 50 Projects</li>
-                        <li><i class="fas fa-check"></i> Advanced Analytics</li>
-                        <li><i class="fas fa-check"></i> Priority Phone & Email Support</li>
-                        <li><i class="fas fa-check"></i> Live Chat Integration</li>
-                    </ul>
-                    <a href="#" class="plan-button popular-button">Choose Plan</a>
-                </div>
-
-                <!-- Plan 3: Enterprise -->
-                <div class="pricing-card reveal-item">
-                    <div class="plan-header">
-                        <i class="fas fa-building"></i>
-                        <h4>Enterprise</h4>
-                    </div>
-                    <p class="plan-description">For large organizations with custom requirements.</p>
-                    <div class="plan-price custom">
-                        <span class="price-value">Custom</span>
-                    </div>
-                    <ul class="plan-features">
-                        <li><i class="fas fa-check"></i> Unlimited Projects</li>
-                        <li><i class="fas fa-check"></i> Custom Reporting</li>
-                        <li><i class="fas fa-check"></i> Dedicated Account Manager</li>
-                        <li><i class="fas fa-check"></i> API Access & SSO</li>
-                    </ul>
-                    <a href="#" class="plan-button">Contact Us</a>
-                </div>
-            </div>
-        </section>
-        <!-- ====================================================== -->
-        <!-- END: REPLACEMENT FOR PRICING SECTION                   -->
-        <!-- ====================================================== -->
-
-        <!-- ====================================================== -->
-        <!-- START: REPLACEMENT FOR ABOUT SECTION                   -->
-        <!-- ====================================================== -->
-        <section id="about" class="scroll-section">
-            <div class="container">
-                <!-- Part 1: The Core Story -->
-                <div class="about-hero-grid">
-                    <div class="about-content reveal-item">
-                        <div class="section-title" style="text-align: left; margin-bottom: 2rem;">
-                            <h3>Our Story</h3>
-                            <h2>Crafted for Marketers, by Marketers</h2>
-                        </div>
-                        <p>We started SaaSify because we were tired of clunky, overpriced marketing tools that were
-                            difficult to use. Our mission is to provide powerful, intuitive, and affordable solutions
-                            that help businesses of all sizes succeed.</p>
-                        <p>Our team is composed of passionate developers, designers, and marketers dedicated to crafting
-                            the best possible experience for our users.</p>
-                    </div>
-                    <div class="about-image-composition reveal-item">
-                        <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080"
-                            alt="Team collaborating in a modern office" class="about-image-back">
-                        <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080"
-                            alt="Close-up of a strategy session" class="about-image-front">
-                    </div>
-                </div>
-
-                <!-- Part 2: Core Values -->
-                <div class="about-values-grid">
-                    <div class="value-card reveal-item">
-                        <i class="fas fa-lightbulb"></i>
-                        <h4>Innovation</h4>
-                        <p>We constantly push the boundaries of technology to deliver cutting-edge features.</p>
-                    </div>
-                    <div class="value-card reveal-item">
-                        <i class="fas fa-users"></i>
-                        <h4>Customer-Centric</h4>
-                        <p>Our customers are at the heart of everything we do. Your success is our success.</p>
-                    </div>
-                    <div class="value-card reveal-item">
-                        <i class="fas fa-handshake"></i>
-                        <h4>Integrity</h4>
-                        <p>We believe in transparent pricing, honest communication, and ethical practices.</p>
-                    </div>
-                </div>
-
-                <!-- Part 3: The Team -->
-                <div class="about-team-section reveal-item">
-                    <h3 class="team-title">Meet the Innovators</h3>
-                    <div class="team-grid">
-                        <div class="team-member-card">
-                            <img src="https://i.pravatar.cc/150?img=68" alt="Team Member Jane Doe">
-                            <h5>Jane Doe</h5>
-                            <span>Founder & CEO</span>
-                        </div>
-                        <div class="team-member-card">
-                            <img src="https://i.pravatar.cc/150?img=60" alt="Team Member John Smith">
-                            <h5>John Smith</h5>
-                            <span>Chief Technology Officer</span>
-                        </div>
-                        <div class="team-member-card">
-                            <img src="https://i.pravatar.cc/150?img=32" alt="Team Member Emily White">
-                            <h5>Emily White</h5>
-                            <span>Head of Product</span>
-                        </div>
-                        <div class="team-member-card">
-                            <img src="https://i.pravatar.cc/150?img=14" alt="Team Member Michael Brown">
-                            <h5>Michael Brown</h5>
-                            <span>Lead Marketing Strategist</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- ====================================================== -->
-        <!-- END: REPLACEMENT FOR ABOUT SECTION                     -->
-        <!-- ====================================================== -->
-
-        <!-- NEW: Blog Section -->
-        <section id="blog" class="container scroll-section">
-            <div class="section-title reveal-item">
-                <h3>From Our Blog</h3>
-                <h2>Insights and Ideas for Growth</h2>
+                <h3>Actualités</h3>
+                <h2>Nos dernières mises à jour</h2>
             </div>
             <div class="blog-grid">
                 <!-- Blog Card 1 -->
-                <div class="blog-card reveal-item">
+<!--                <div class="blog-card reveal-item">
                     <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8ZGF0YSxhbmFseXRpY3MsZGFzaGJvYXJk&ixlib=rb-4.0.3&q=80&w=1080"
                         alt="Data analytics dashboard" class="blog-card-image">
                     <div class="blog-card-content">
@@ -374,9 +197,9 @@
                             <a href="#" class="explore-link">Read More <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
-                </div>
+                </div> 
                 <!-- Blog Card 2 -->
-                <div class="blog-card reveal-item">
+ <!--                <div class="blog-card reveal-item">
                     <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8c2VvLG1hcmtldGluZyxzdHJhdGVneQ&ixlib=rb-4.0.3&q=80&w=1080"
                         alt="Team working on SEO strategy" class="blog-card-image">
                     <div class="blog-card-content">
@@ -391,9 +214,9 @@
                     </div>
                 </div>
                 <!-- Blog Card 3 -->
-                <div class="blog-card reveal-item">
+ <!--                <div class="blog-card reveal-item">
                     <!-- FIXED: The src URL has been replaced with a working image link -->
-                    <img src="https://images.unsplash.com/photo-1516321497487-e288fb19713f?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080"
+ <!--                    <img src="https://images.unsplash.com/photo-1516321497487-e288fb19713f?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080"
                         alt="A team collaborating and reviewing feedback on a laptop" class="blog-card-image">
                     <div class="blog-card-content">
                         <span class="blog-category" style="background-color: var(--accent-magenta);">Customer
@@ -408,10 +231,10 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- NEW: Contact Section -->
-        <section id="contact" class="container scroll-section">
+ <!--        <section id="contact" class="container scroll-section">
             <div class="contact-grid">
                 <div class="contact-info reveal-item">
                     <div class="section-title" style="text-align: left; margin-bottom: 2rem;">
@@ -490,23 +313,11 @@
                         <li><a href="#contact">Contact Us</a></li>
                     </ul>
                 </div>
-
-                <!-- Column 4: Newsletter Signup -->
-                <div class="footer-column">
-                    <h4>Stay Updated</h4>
-                    <p>Get the latest product updates, articles, and resources, sent to your inbox weekly.</p>
-                    <form class="newsletter-form">
-                        <input type="email" placeholder="Enter your email" required>
-                        <button type="submit" aria-label="Subscribe to newsletter">
-                            <i class="fas fa-paper-plane"></i>
-                        </button>
-                    </form>
-                </div>
             </div>
 
             <div class="footer-bottom">
-                <p>© 2024 SaaSify. All rights reserved.</p>
-                <p class="made-with-love">Made with <i class="fas fa-heart"></i> in California</p>
+                <p>© 2026 Cool OS</p>
+                <p class="made-with-love">Fait avec <i class="fas fa-heart"></i> en France</p>
             </div>
         </div>
     </footer>
